<resources>
    <string name="app_name">LearnVolley</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_request">StringRequest请求</string>
    <string name="json_request">JsonRequest请求</string>
    <string name="image_request">ImageRequest请求</string>
    <string name="image_loader_request">Image Loader 请求</string>
    <string name="net_image_loader_request">NetImage Loader 请求</string>
    <string name="post_request">Post 请求</string>
    <string name="gson_request">Gson 请求</string>
    <string name="xml_request">Xml 请求</string>
    <string name="demo_request">完整的网络请求过程</string>
    <string name="send_request">发送请求</string>
    <string name="request_url_hint">请输入请求地址</string>
    <string name="request_send">发送</string>
    <string name="request_fail_text">请求失败</string>
    <string name="request_params_text">参数格式:key=value，多个参数用 ; 分隔</string>
</resources>
