<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_main_string_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_request"/>
    <Button
        android:id="@+id/btn_main_json_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json_request"
        android:layout_below="@id/btn_main_string_request"/>
    <Button
        android:id="@+id/btn_main_image_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_request"
        android:layout_below="@id/btn_main_json_request"/>
    <Button
        android:id="@+id/btn_main_image_loader_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_loader_request"
        android:layout_below="@id/btn_main_image_request"/>
    <Button
        android:id="@+id/btn_main_network_image_loader_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/net_image_loader_request"
        android:layout_below="@id/btn_main_image_loader_request"/>
    <Button
        android:id="@+id/btn_main_post_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_request"
        android:layout_below="@id/btn_main_network_image_loader_request"/>


</RelativeLayout>
