<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_post_request_input_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_url_hint"
            android:inputType="textUri"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_params_text"/>

        <EditText
            android:id="@+id/et_post_request_input_params"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_send" />
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp" />


        </LinearLayout>


</ScrollView>